--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -39,8 +39,9 @@ Let's first preprocess the data.
 tse <- agglomerateByRank(tse, rank = "order")
 
 # Apply CLR transform
-tse <- transformSamples(tse, method = "relabundance", pseudocount = 1)
-tse <- transformSamples(tse, assay_name = "relabundance", method = "clr")
+assay(tse, "pseudo") <- assay(tse, "counts") + 1
+tse <- transformCounts(tse, assay_name = "pseudo", method = "relabundance")
+tse <- transformCounts(tse, assay_name = "relabundance", method = "clr")
 
 # Get assay
 assay <- assay(tse, "clr")
