--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -46,9 +46,11 @@ tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 tse <- subsetTaxa(tse, is.element(rownames(tse), rel_taxa))
 
 # CLR and Z transforms
-tse <- transformSamples(tse, method = "relabundance")
-tse <- transformCounts(tse, assay_name = "relabundance", method = "clr", pseudocount = 1)
-tse <- transformFeatures(tse, assay_name = "clr", method = "z")
+assay(tse, "pseudo") <- assay(tse, "counts") + 1
+tse <- transformCounts(tse, MARGIN = "samples", method = "relabundance")
+tse <- transformCounts(tse, MARGIN = "samples", assay_name = "relabundance",
+                       method = "clr")
+tse <- transformCounts(tse, MARGIN = "features", assay_name = "clr", method = "z")
 
 Countries <- data.frame("Country" = colData(tse)$Country)
 rownames(Countries) <- colData(tse)$Sample_ID
@@ -218,9 +220,12 @@ Looking at heatmaps of the CSTs can reveal structure on a different level. Using
 
 ```{r message = FALSE, warning = FALSE, results = FALSE}
 # Z transform of CLR counts
-tse2 <- transformCounts(tse2, assay_name = "counts", method = "relabundance")
-tse2 <- transformCounts(tse2, assay_name = "relabundance", method = "clr", pseudocount = 1)
-tse2 <- transformFeatures(tse2, assay_name = "clr", method = "z")
+assay(tse, "pseudo") <- assay(tse, "counts") + 1
+tse2 <- transformCounts(tse2, MARGIN = "samples", assay_name = "counts",
+                        method = "relabundance")
+tse2 <- transformCounts(tse2, MARGIN = "samples", assay_name = "relabundance",
+                        method = "clr")
+tse2 <- transformCounts(tse2, MARGIN = "features", assay_name = "clr", method = "z")
 # get top taxa
 tse2 <- subsetTaxa(tse2, is.element(rownames(tse2), rel_taxa))
 
@@ -348,7 +353,7 @@ Computing the bray PCoA and storing it as a dataframe
 
 ```{r}
 # Calculate relative abundances
-tse_dmn <- transformSamples(tse_dmn, method = "relabundance")
+tse_dmn <- transformCounts(tse_dmn, method = "relabundance")
 # Does principal coordinate analysis
 bray_pcoa_df <- calculateMDS(tse_dmn, FUN = vegan::vegdist, method = "bray", 
                              exprs_values = "relabundance")
@@ -379,9 +384,11 @@ Visualise dmm clusters in a heatmap.
 
 ```{r}
 # get clr + z-transformed counts
-tse_dmn <- transformCounts(tse_dmn, assay_name = "counts", method = "relabundance")
+assay(tse_dmn, "pseudo") <- assay(tse_dmn, "counts") + 1
+tse_dmn <- transformCounts(tse_dmn, assay_name = "pseudo", method = "relabundance")
 tse_dmn <- transformCounts(tse_dmn, assay_name = "relabundance", method = "clr", pseudocount = 1)
-tse_dmn <- transformFeatures(tse_dmn, assay_name = "clr", method = "z")
+tse_dmn <- transformCounts(tse_dmn, MARGIN = "features",
+                           assay_name = "clr", method = "z")
 # objects containing dmm component information
 clust <- factor(vec)
 names(clust) <- colnames(tse_dmn)
