--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -34,7 +34,7 @@ designed for microbial data.
 Load example data
 ```{r load-pkg-data}
 library(mia)
-data("HintikkaXOData")
+data(HintikkaXOData, package="mia")
 mae <- HintikkaXOData
 ```
 
