--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -226,7 +226,7 @@ pheatmap(mat, annotation_row = taxa_clusters,
 
 In addition, there are also other packages that provide functions for more complex heatmaps,
 such as [_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html)
-and [ComplexHeatmap](https://academic.oup.com/bioinformatics/article/32/18/2847/1743594?login=true).
+and ComplexHeatmap [@ComplexHeatmap].
 [sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
 package provides wrapper for _ComplexHeatmap_ and its usage is explained in chapter \@ref(viz-chapter)
 along with the `pheatmap` package for clustered heatmaps.
