--- a/book.bib
+++ b/book.bib
@@ -277,6 +277,40 @@
   year =	 {2018}
 }
 
+
+@Article{Callahan2016workflow,
+  author =	 {Ben J. Callahan and Kris Sankaran and Julia
+                  A. Fukuyama and Paul J. McMurdie and Susan
+                  P. Holmes},
+  title =	 {Bioconductor Workflow for Microbiome Data Analysis:
+                  from raw reads to community analyses [version 2;
+                  peer review: 3 approved]},
+  journal =	 {F1000Research},
+  year =	 2016,
+  volume =	 5,
+  pages =	 1492,
+  doi =		 {10.12688/f1000research.8986.2}
+}
+
+@article{ComplexHeatmap,
+author = {Gu, Zuguang},
+title = {Complex heatmap visualization},
+journal = {iMeta},
+volume = {1},
+number = {3},
+pages = {e43},
+keywords = {bioconductor, clustering, complex heatmap, R package, visualization},
+doi = {https://doi.org/10.1002/imt2.43},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/imt2.43},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/imt2.43},
+abstract = {Abstract Heatmap is a widely used statistical visualization method on matrix-like data to reveal similar patterns shared by subsets of rows and columns. In the R programming language, there are many packages that make heatmaps. Among them, the ComplexHeatmap package provides the richest toolset for constructing highly customizable heatmaps. ComplexHeatmap can easily establish connections between multisource information by automatically concatenating and adjusting a list of heatmaps as well as complex annotations, which makes it widely applied in data analysis in many fields, especially in bioinformatics, to find hidden structures in the data. In this article, we give a comprehensive introduction to the current state of ComplexHeatmap, including its modular design, its rich functionalities, and its broad applications.},
+year = {2022}
+}
+
+
+
+
+
 @Article{Chao1984,
     author = {Chao A},
     title = {Non-parametric estimation of the number of classes in a population},
