--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -1,5 +1,3 @@
-# (PART) Appendix {-}
-
 
 # Resources {#resources}
 
@@ -131,26 +129,25 @@ deployed in R/Bioconductor packages [@Huber2015].
 * I Robert Gentleman. R Programming for Bioinformatics. Chapman & Hall/CRC, New York, 2008. ISBN-13 978-1420063677 [@gentleman2008r]
 
 
-## Reproducible reporting with Rmarkdown
+
+## Reproducible reporting with Quarto
 
 Reproducible reporting is the starting point for robust interactive
-data science. You can perform the following tasks to get started.
+data science. Perform the following tasks:
 
- * If you are entirely new to Markdown, take
-   [this](https://www.markdowntutorial.com/) 10 minute tutorial to get
-   introduced to the most important functions within Markdown. Then
-   experiment with different options with
-   [Rmarkdown](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf)
+ * If you are entirely new to literate programming and reproducible
+   reporting, take [this](https://www.markdowntutorial.com/) 10 minute
+   tutorial to get introduced to the most important functions within
+   Markdown. 
 
- * Create a Rmarkdown template in RStudio, and render it into a
+ * Create a Quarto template in RStudio, and render it into a
    document (markdown, PDF, docx or other format). In case you are new
-   to Rmarkdown [Rstudio provides
-   resources](https://rmarkdown.rstudio.com/lesson-1.html) to learn
-   about the use cases and the basics of Rmarkdown.
+   to Quarto, see [this page](https://quarto.org/).
 
- * Further examples are tips for Rmarkdown are available in the
-   online tutorial to reproducible reporting by [Dr. C Titus
-   Brown](https://rpubs.com/marschmi/RMarkdown).
+ * Examples are tips for closely related Rmarkdown are available in
+   the online tutorial to reproducible reporting by [Dr. C Titus
+   Brown](https://rpubs.com/marschmi/RMarkdown); see also [Rmarkdown
+   cheatsheet](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf)
 
 
 **Figure sources:** 
