--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -57,6 +57,7 @@ techniques, we can visualize the abundances at Phylum level.
 
 ```{r heatmap}
 library(ggplot2)
+
 # Add clr-transformation on samples
 assay(tse_phylum, "pseudo") <- assay(tse_phylum, "counts") + 1
 tse_phylum <- transformCounts(tse_phylum, assay_name = "pseudo",
@@ -70,7 +71,12 @@ tse_phylum <- transformCounts(tse_phylum,
 tse_phylum <- transformCounts(tse_phylum, assay_name = "clr", 
                               MARGIN = "features",
                               method = "z", name = "clr_z")
-# Melts the assay
+```
+
+Visualize as heatmap.
+
+```{r heatmapvisu}
+# Melt the assay for plotting purposes
 df <- meltAssay(tse_phylum, assay_name = "clr_z")
 
 # Determines the scaling of colours
@@ -94,10 +100,7 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
 _pheatmap_ is a package that provides methods to plot clustered heatmaps. 
 
 ```{r pheatmap1}
-if(!require(pheatmap)){
-  install.packages("pheatmap")
-  library(pheatmap)
-}
+if(!require(pheatmap)){install.packages("pheatmap"); library(pheatmap)}
 
 # Takes subset: only samples from feces, skin, or tongue
 tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
