--- a/80_training.Rmd
+++ b/80_training.Rmd
@@ -64,7 +64,7 @@ We encourage to familiarize with the material and test examples in advance.
 
  * [Orchestrating Microbiome Analysis with R/Bioconductor (OMA)](https://microbiome.github.io/OMA/)
 
- * Short nline videos on [R/Bioconductor microbiome data science tools](https://www.youtube.com/playlist?list=PLjiXAZO27elAJEptP59BN3whVJ61XIkST).
+ * Short online videos on [R/Bioconductor microbiome data science tools](https://www.youtube.com/playlist?list=PLjiXAZO27elAJEptP59BN3whVJ61XIkST).
 
  * Lecture slides will be made available online
 
