--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -36,9 +36,8 @@ be visualized as follows:
 
 ```{r, warning=FALSE, message=FALSE}
 # Loading example data
-#library(microbiomeDataSets)
-#tse <- atlas1006()
 library(miaTime)
+library(miaViz)
 data(hitchip1006)
 tse <- hitchip1006
 
@@ -46,9 +45,12 @@ tse <- hitchip1006
 tse <- transformCounts(tse, MARGIN = "samples", method = "relabundance")
 
 library(miaViz)
+# Use argument names
+# assay_name / assay_name / assay_name
+# depending on the mia package version
 plotAbundanceDensity(tse, layout = "jitter", assay_name = "relabundance",
                      n = 40, point_size=1, point_shape=19, point_alpha=0.1) + 
-    scale_x_log10(label=scales::percent)
+                     scale_x_log10(label=scales::percent)
 ```
 
 The relative abundance values for the top-5 taxonomic features can be
@@ -106,7 +108,8 @@ First the data can be agglomerated to the taxonomic level and `getPrevalence`
 applied on the resulting object.
 
 ```{r}
-# Agglomerate taxa abundances to Phylum level, and add the new table to the altExp slot
+# Agglomerate taxa abundances to Phylum level, and add the new table
+# to the altExp slot
 altExp(tse,"Phylum") <- agglomerateByRank(tse, "Phylum")
 # Check prevalence for the Phylum abundance table from the altExp slot
 head(getPrevalence(altExp(tse,"Phylum"), detection = 1/100, sort = TRUE,
@@ -114,8 +117,8 @@ head(getPrevalence(altExp(tse,"Phylum"), detection = 1/100, sort = TRUE,
 ```
 
 
-Alternatively, the `rank` argument could be set to perform the agglomeration on
-the fly.
+Alternatively, the `rank` argument could be set to perform the
+agglomeration on the fly.
 
 ```{r}
 head(getPrevalence(tse, rank = "Phylum", detection = 1/100, sort = TRUE,
@@ -208,6 +211,8 @@ plotRowTree(x[rowData(x)$Phylum %in% top_phyla,],
             tip_colour_by = "prevalence",
             node_colour_by = "prevalence")
 ```
+
+
 ```{r plot-prev-mean, message=FALSE, fig.cap="Prevalence of top phyla as judged by mean abundance"}
 plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
             edge_colour_by = "Phylum",
@@ -290,8 +295,8 @@ library(patchwork)
 p1 + p2
 ```
 
-Library sizes - and other variables from `colData` - can be also visualized by using 
-specified function called `plotColData`.
+Library sizes - and other variables from `colData` - can be also
+visualized by using specified function called `plotColData`.
 
 ```{r plot-viz-lib-size-2, fig.width=8, fig.height=4, fig.cap="Library sizes per sample."}
 library(ggplot2)
@@ -324,7 +329,8 @@ Samples might be contaminated with exogenous sequences. The impact of
 each contaminant can be estimated based on their frequencies and
 concentrations across the samples.
 
-The following [decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html)
+The following [decontam
+functions](https://microbiome.github.io/mia/reference/isContaminant.html)
 are based on the [@davis2018simple] and support such functionality:
 
 * `isContaminant`, `isNotContaminant`
