--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -11,25 +11,28 @@ data("GlobalPatterns", package="mia")
 tse <- GlobalPatterns
 ```
 
-Clustering is an unsupervised machine learning technique. The idea of it is to find
-clusters from the data. A cluster is a group of features/samples that share pattern.
-For example, with clustering, we can find group of samples that share similar 
-community composition. There are multiple clustering algorithms available.
+Clustering is an unsupervised machine learning technique. The idea of
+it is to find clusters from the data. A cluster is a group of
+features/samples that share pattern.  For example, with clustering, we
+can find group of samples that share similar community
+composition. There are multiple clustering algorithms available.
 
 ## Hiearchical clustering
 
-Hiearchical clustering is a clustering method that aims to find hiearchy between 
-samples/features. There are to approaches: agglomerative ("bottom-up") 
-and divisive ("top-down"). 
+Hiearchical clustering is a clustering method that aims to find
+hiearchy between samples/features. There are to approaches:
+agglomerative ("bottom-up") and divisive ("top-down").
 
-In agglomerative approach, each observation is first unique cluster. 
-Algorithm continues by agglomerating similar clusters. Divisive approach starts 
-with one cluster that contains all the observations. Clusters are splitted recursively
-to clusters that differ the most. Clustering ends when each cluster contains only one
+In agglomerative approach, each observation is first unique cluster.
+Algorithm continues by agglomerating similar clusters. Divisive
+approach starts with one cluster that contains all the
+observations. Clusters are splitted recursively to clusters that
+differ the most. Clustering ends when each cluster contains only one
 observation.
 
-Hiearchical clustering can be visualized with dendrogram tree. In each splitting
-point, the three is divided into two clusters leading to hierarchy. 
+Hiearchical clustering can be visualized with dendrogram tree. In each
+splitting point, the three is divided into two clusters leading to
+hierarchy.
 
 Let's load data from mia package.
 
@@ -48,6 +51,9 @@ sequencing data is compositional, relative transformation is applied.
 In the second step, clustering is performed based on dissimilarities. 
 
 ```{r hclust2}
+if( !require(NbClust) ){install.packages("NbClust"); library(NbClust)}
+if( !require(cobiclust) ){install.packages("cobiclust"); library(cobiclust)}
+
 # Apply transformation
 tse <- transformCounts(tse, method = "relabundance")
 # Get the assay
@@ -63,20 +69,17 @@ hc <- hclust(diss, method = "complete")
 
 # To visualize, convert hclust object into dendrogram object
 dendro <- as.dendrogram(hc)
+
 # Plot dendrogram
 plot(dendro)
 ```
-We can use dendrogram to determine the number of clusters. Usually, the tree is splitted 
-where the length of branches are the longest.
 
-However, as we can see from the dendrogram, clusters are no clear. Let's use an algorithm to 
-solve the best number of clusters.
+We can use dendrogram to determine the number of clusters. Usually the
+tree is splitted where the branch length is the largest. However, as
+we can see from the dendrogram, clusters are not clear. Algorithms are
+available to identify the optimal number of clusters.
 
 ```{r hclust3}
-if( !require(NbClust) ){
-    install.packages("NbClust")
-    library(NbClust)
-}
 # Determine the optimal number of clusters
 res <- NbClust(diss = diss, distance = NULL, method = "ward.D2",
                index = "silhouette")
@@ -107,18 +110,21 @@ plot(dend)
 
 ## K-means clustering
 
-Because, we were not able to find clusters with hierarchical clustering, let's try
-k-means clustering. In k-means clustering, observations are divided into clusters 
-so that the mean distances between observations and cluster centers are minimized;
-an observation belongs to cluster whose center is the nearest.
+Hierarchical clustering did not yield clusters. Let's try k-means
+clustering instead. Here observations are divided into clusters so
+that the distances between observations and cluster centers are
+minimized; an observation belongs to cluster whose center is the
+nearest.
 
-The algorithm starts by dividing observation to random clusters whose number is 
-defined by user. The centroids of clusters are then calculated. After that, observations'
-allocation to clusters are updated so that the means are minimized. Again, centroid 
-are calculated, and algorithm continues iteratively until the assignments do not change.
+The algorithm starts by dividing observation to random clusters whose
+number is defined by user. The centroids of clusters are then
+calculated. After that, observations' allocation to clusters are
+updated so that the means are minimized. Again, centroid are
+calculated, and algorithm continues iteratively until the assignments
+do not change.
 
-The number of clusters can be determined based on algorithm. Here we utilize silhouette
-analysis.
+The number of clusters can be determined based on algorithm. Here we
+utilize silhouette analysis.
 
 ```{r kmeans1}
 if( !require(factoextra) ){
@@ -390,15 +396,17 @@ solutions to apply biclustering to them.
 2.   Taxa vs biomolecule/biomarker
 3.   Taxa vs taxa
 
-Biclusters can be visualized using heatmap or boxplot, for instance. For checking purposes, 
-also scatter plot might be valid choice.
+Biclusters can be visualized using heatmap or boxplot, for
+instance. For checking purposes, also scatter plot might be valid
+choice.
 
-Check more ideas for heatmaps from chapters \@ref(viz-chapter) and \@ref(microbiome-community.
+Check more ideas for heatmaps from chapters \@ref(viz-chapter) and
+\@ref(microbiome-community.
 
 ### Taxa vs samples
 
-When you have microbial abundance matrices, we suggest to use _cobiclust_ which is
-designed for microbial data. 
+When you have microbial abundance matrices, we suggest to use
+_cobiclust_ which is designed for microbial data.
 
 Load example data
 ```{r load-pkg-data2}
@@ -421,11 +429,6 @@ _cobiclust_ takes counts table as an input and gives _cobiclust_ object as an ou
 It includes clusters for taxa and samples. 
 
 ```{r cobiclust_2}
-if(!require(cobiclust)){
-    install.packages("cobiclust")
-    library(cobiclust)
-}
-
 # Do clustering; use counts table´
 clusters <- cobiclust(assay(mae[[1]], "counts"))
 
@@ -444,9 +447,10 @@ mae[[1]] <- mae[[1]][order(rowData(mae[[1]])$clusters), order(colData(mae[[1]])$
 clusters$classification
 ```
 
-Next we can plot clusters. Commonly used plot is heatmap with annotations. 
+Next we can plot clusters. Annotated heatmap is a common choice.
 
 ```{r cobiclust_3, fig.width=14, fig.height=12}
+
 if(!require(pheatmap)){
     install.packages("pheatmap")
     library(pheatmap)
@@ -464,13 +468,17 @@ colnames(annotation_col) <- "col_clusters"
 
 annotation_row <- data.frame(rowData(mae[[1]])[, "clusters", drop = F])
 colnames(annotation_row) <- "row_clusters"
+```
 
-# Create a heatmap
+
+Plot the heatmap.
+
+```{r cobiclust_3b, fig.width=14, fig.height=12}
 pheatmap(assay(mae[[1]], "clr_z"), cluster_rows = F, cluster_cols = F, 
          annotation_col = annotation_col,
          annotation_row = annotation_row)
-
 ```
+
 
 Boxplot is commonly used to summarize the results:
 
@@ -501,8 +509,9 @@ p1 + p2
 
 ### Taxa vs biomolecules
 
-Here, we analyze cross-correlation between taxa and metabolites. This is a case, where
-we use _biclust_ method which is suitable for numeric matrices in general.
+Here, we analyze cross-correlation between taxa and metabolites. This
+is a case, where we use _biclust_ method which is suitable for numeric
+matrices in general.
 
 ```{r biclust_1}
 # Samples must be in equal order 
@@ -541,8 +550,9 @@ bc <- biclust(corr, method=BCPlaid(), fit.model = y ~ m,
 bc
 ```
 
-The object includes cluster information. However compared to _cobiclust_, 
-_biclust_ object includes only information about clusters that were found, not general cluster.
+The object includes cluster information. However compared to
+_cobiclust_, _biclust_ object includes only information about clusters
+that were found, not general cluster.
 
 Meaning that if one cluster size of 5 features was found out of 20 features, 
 those 15 features do not belong to any cluster. That is why we have to create an
@@ -566,7 +576,8 @@ additional cluster for features/samples that are not assigned into any cluster.
   return(list(bc_columns = bc_columns, bc_rows = bc_rows))
 }
 
-# Input clusters, and how many observations there should be, i.e., the number of samples or features
+# Input clusters, and how many observations there should be, i.e.,
+# the number of samples or features
 .manipulate_bc_data <- function(bc_clusters, assay, row_col){
   # Get right dimension
   dim <- ifelse(row_col == "col", ncol(assay), nrow(assay))
@@ -577,7 +588,8 @@ additional cluster for features/samples that are not assigned into any cluster.
     names <- rownames(assay)
   }
   
-  # If no clusters were found, create one. Otherwise create additional cluster which
+  # If no clusters were found, create one. Otherwise create additional
+  # cluster which
   # contain those samples that are not included in clusters that were found.
   if( nrow(bc_clusters) != dim ){
       bc_clusters <- data.frame(cluster = rep(TRUE, dim))
@@ -612,7 +624,9 @@ head(bicluster_rows)
 Let's collect information for the scatter plot. 
 
 ```{r biclust_5}
-# Function for obtaining sample-wise sum, mean, median, and mean variance for each cluster
+# Function for obtaining sample-wise sum, mean, median, and mean variance
+# for each cluster
+
 .sum_mean_median_var <- function(tse1, tse2, assay_name1, assay_name2, clusters1, clusters2){
   
   list <- list()
@@ -646,13 +660,14 @@ Let's collect information for the scatter plot.
 df <- .sum_mean_median_var(mae[[1]], mae[[2]], "rclr", "nmr", bicluster_rows, bicluster_columns)
 ```
 
-Now we can create a scatter plot. X-axis includes median clr abundance of microbiome
-and y-axis median absolute concentration of each metabolite. Each data point represents
-a single sample. 
+Now we can create a scatter plot. X-axis includes median clr abundance
+of microbiome and y-axis median absolute concentration of each
+metabolite. Each data point represents a single sample.
 
-From the plots, we can see that there is low negative correlation in both cluster 1 and 3.
-This means that when abundance of bacteria belonging to cluster 1 or 3 is higher, 
-the concentration of metabolites of cluster 1 or 3 is lower, and vice versa. 
+From the plots, we can see that there is low negative correlation in
+both cluster 1 and 3.  This means that when abundance of bacteria
+belonging to cluster 1 or 3 is higher, the concentration of
+metabolites of cluster 1 or 3 is lower, and vice versa.
 
 ```{r biclust_6, fig.width=14, fig.height=6, fig.show="keep", out.width="33%"}
 pics <- list()
@@ -697,8 +712,8 @@ pheatmap(corr, cluster_cols = F, cluster_rows = F,
 
 ### Taxa vs taxa
 
-Third and final example deals with situation where we want to analyze correlation
-between taxa. _biclust_ is suitable for this. 
+Third and final example deals with situation where we want to analyze
+correlation between taxa. _biclust_ is suitable for this.
 
 ```{r biclust_9}
 # Calculate cross-correlation
@@ -746,7 +761,8 @@ pheatmap(corr, cluster_cols = F, cluster_rows = F,
 
 ## Additional Community Typing
 
-For more community typing techniques applied to the 'SprockettTHData' data set, see the attached .Rmd file.
+For more community typing techniques applied to the 'SprockettTHData'
+data set, see the attached .Rmd file.
 
 Link:
 
